[gd_scene load_steps=8 format=2]

[ext_resource path="res://Dice.gd" type="Script" id=1]
[ext_resource path="res://Assets/sounds/click.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/rolling dice/dice_faces.png" type="Texture" id=3]
[ext_resource path="res://Assets/rolling dice/empty_dice.png" type="Texture" id=4]

[sub_resource type="PhysicsMaterial" id=6]

[sub_resource type="RectangleShape2D" id=13]

[sub_resource type="Animation" id=4]
resource_name = "New Anim"
length = 0.2
loop = true

[node name="Dice" type="RigidBody2D" groups=["dice"]]
position = Vector2( -11, 89 )
collision_layer = 0
collision_mask = 0
mass = 2.04082
physics_material_override = SubResource( 6 )
gravity_scale = 3.0
contacts_reported = 3
contact_monitor = true
linear_velocity = Vector2( 500, -500 )
linear_damp = 5.0
angular_velocity = 5.0
script = ExtResource( 1 )

[node name="DiceCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 4 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 15
lifetime = 0.4
one_shot = true
explosiveness = 0.7
lifetime_randomness = 0.8
local_coords = false
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 75.0
angular_velocity = 200.0
angle = 0.1
angle_random = 1.0
scale_amount = 2.0
color = Color( 0.0313726, 0.0941176, 0.12549, 1 )

[node name="BlankDice" type="Sprite" parent="."]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 100, 100 )

[node name="DiceFace" type="Sprite" parent="."]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 20, 20 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Dice_body_entered"]
